Bones driven by ChildOf constraint don't work with New Depsgraph #46839

Closed
opened 2015-11-21 23:57:01 +01:00 by John Cox · 6 comments

System Information
MacBook Pro
Processor 2.2 GHz Intel Core i7
Memory 16 GB 1600 MHz DDR3
Graphics Intel Iris Pro 1024 MB
Software OS X 10.9.5 (13F1066)

Blender Version
Broken: 2.76b f337fea

Short description of error
Armature bones are connected to animated Empties via ChildOf constraints. Using the Old Deps graph, the Empties move
the bones which deform a mesh as expected. With the New Depsgraph, the Empties don't move at all and there is no deformation.
NB. The mesh is also linked to the Empties via Hook modifiers but these are disabled. Deleting the Hooks doesn't fix the issue.

Exact steps for others to reproduce the error
Open the attached blend file with Old deps graph and run animation. Empties drive armature bones and mesh deforms.
Open same file with --new-depsgraph flag and play animation -> nothing happens.

holeWhole005.blend

**System Information** MacBook Pro Processor 2.2 GHz Intel Core i7 Memory 16 GB 1600 MHz DDR3 Graphics Intel Iris Pro 1024 MB Software OS X 10.9.5 (13F1066) **Blender Version** Broken: 2.76b f337fea **Short description of error** Armature bones are connected to animated Empties via ChildOf constraints. Using the Old Deps graph, the Empties move the bones which deform a mesh as expected. With the New Depsgraph, the Empties don't move at all and there is no deformation. NB. The mesh is also linked to the Empties via Hook modifiers but these are disabled. Deleting the Hooks doesn't fix the issue. **Exact steps for others to reproduce the error** Open the attached blend file with Old deps graph and run animation. Empties drive armature bones and mesh deforms. Open same file with --new-depsgraph flag and play animation -> nothing happens. [holeWhole005.blend](https://archive.blender.org/developer/F256759/holeWhole005.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JohnCox

Added subscriber: @JohnCox

Added subscriber: @Sergey

Added subscriber: @Sergey

It is in fact just a missing time update for the motrack constraint it seems. Here's simplified .blend file holeWhole006.blend.

Goes to my desk.

It is in fact just a missing time update for the motrack constraint it seems. Here's simplified .blend file [holeWhole006.blend](https://archive.blender.org/developer/F257808/holeWhole006.blend). Goes to my desk.
Sergey Sharybin self-assigned this 2015-11-23 14:15:28 +01:00

This issue was referenced by 9ea4202816

This issue was referenced by 9ea42028166f46b9cc55519ea3f446c872c91aac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46839
No description provided.