Fix T46839: New dependency graph missed time update on motrack constraints